# CV804-starter-code

./: .gitignore  README.md
assign1/: CMakeLists.txt  README.md  assign1.cpp  assign1.h  main.cpp
assign2/: CMakeLists.txt  README.md
assign2/include/: GlutExaminer.h  GlutViewer.h  MeshViewer.h  ValenceViewer.h  gl.h
assign2/src/: GlutExaminer.cpp  GlutViewer.cpp  MeshViewer.cpp  ValenceViewer.cpp  main.cpp
assign3/: CMakeLists.txt  README.md  visualize_spline.py
assign3/include/: assign3.h  spline.h  texture.h  vec3f.h
assign3/spline_data/: circle.sp  cs1.sp  goodRide.sp  leftturn.sp  rollerCoaster.sp  star.sp  straightLine.sp  upsidedown.sp  xyz.sp  yaxis.sp  zaxis.sp
assign3/src/: assign3.cpp  main.cpp  spline.cpp  texture.cpp  vec3f.cpp
assign4/: CMakeLists.txt  README.md
assign4/include/: assign4.h  camera.h  light.h  matrix.h  primitives.h  scene.h  scene_reader.h  vec3d.h
assign4/scenes_data/: test_double_sphere.scene  test_triangle.scene
assign4/src/: assign4.cpp  camera.cpp  light.cpp  main.cpp  matrix.cpp  primitives.cpp  scene.cpp  scene_reader.cpp  vec3d.cpp
assign5/: CMakeLists.txt  README.md
assign5/ANN/: ANN.cpp  kd_search.cpp  pr_queue_k.h
assign5/include/: closest_point.h  gl.h  glut_examiner.h  glut_viewer.h  matrix.h  registration.h  registration_viewer.h  transformation.h  vector.h
assign5/src/: closest_point.cpp  glut_examiner.cpp  glut_viewer.cpp  main.cpp  registration.cpp  registration_viewer.cpp  transformation.cpp
assign6/: CMakeLists.txt  README.md
assign6/IsoEx/Grids/: ScalarGridT.cc  ScalarGridT.hh
assign6/cmake/: FindFreeGLUT.cmake  FindOpenMesh.cmake
assign6/gmm/: dal_except.h  dal_std.h
assign6/reconstruct/: ImplicitHoppe.h  ImplicitRBF.cpp  ImplicitRBF.h  reconstruct.cpp
assign6/viewer/: GlutExaminer.h  GlutViewer.cpp  MeshViewer.cpp  MeshViewer.h  gl.h
assign7/: CMakeLists.txt  README.md
assign7/decimation/: deci.cpp
assign7/viewer/: GlutExaminer.cpp  GlutViewer.h  ValenceViewer.cpp  ValenceViewer.h  valenceview.cpp
